# Cognitive_EW

./: .gitignore  CLAUDE.md  Propuesta.md  README.md  changes.md  pyproject.toml
configs/deep_rl_jamming/: env.yaml  train.yaml
configs/ew_library/: responses.yaml
configs/experiments/: full.yaml  quick.yaml
configs/gan_signals/: export.yaml  pdw.yaml  robustness.yaml  wgan_gp.yaml
configs/marl_formation/: env.yaml  iql.yaml  qmix.yaml
configs/temporal_cnn_elint/: emitters.yaml  train.yaml  train_v2.yaml  train_v2_quick.yaml
docs/: PAPER-BRIEF.md  PAPER-WRITING-PLAN.md  ROADMAP.md
docs/articles/: README.md
docs/research/: estado-del-arte.md
notebooks/: colab_train_models.py  run_anchors.py
paper/: .gitignore  README.md  main.tex  refs.bib
paper/tables/: anchor_summary.tex  elint_strict.tex  gan_validity.tex  latency.tex  reproducibility.tex
results/anchors_full_ms_accepted/: README.md  anchors_multiseed_report.json
scripts/paper/: build_figures.py  extract_results_tables.py
tests/data/: conftest.py  test_loaders.py  test_pdw_dataset.py  test_pdw_generator.py  test_pdw_library.py  test_pdw_preprocessing.py  test_preprocessing.py  test_synthetic_loader.py
tests/deep_rl_jamming/: test_agent.py  test_compare.py  test_env.py  test_reward.py  test_threat.py  test_train.py
tests/ew_library/: test_library.py
tests/experiments/: test_anchors.py  test_gpu_readiness.py  test_multiseed.py  test_report.py  test_run_anchors_cli.py
tests/gan_signals/: test_discriminator.py  test_export.py  test_generator.py  test_robustness.py  test_sampler.py  (+2 more)
(+117 files in other folders)
