[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cog_ew"]

[project]
name = "cog-ew"
version = "0.1.0"
description = "Cognitive Electronic Warfare System — Deep RL para jamming adaptativo, clasificación ELINT y coordinación EW en entorno NTTR"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "h5py>=3.16.0",
    "kagglehub>=1.0.2",
    "numpy>=2.4.6",
    "pyyaml>=6.0.3",
    "scipy>=1.17.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
    "types-pyyaml>=6.0.12.20260518",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
torchvision = [{ index = "pytorch-cu124" }]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
